--- a/i18n/it/docusaurus-plugin-content-docs/current/community/05.faq.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/community/05.faq.mdx
@@ -88,7 +88,7 @@ Se desiderate che la vostra app preferita sia implementata e documentata [aiutat
 
 #### What is YunoHost's policy regarding the apps included in the official catalog ?
 
-See [this page](/packaging/policy)
+See [this page](/dev/packaging/policy)
 
 #### Perché non includete la [caratteristica X]?
 
