--- a/docs/admin/30.apps/index.mdx
+++ b/docs/admin/30.apps/index.mdx
@@ -177,6 +177,6 @@ If you want to learn or contribute to app packaging, please check the [contribut
 
 ### Integration and quality levels
 
-Automated tests are being run regularly to test the integration and quality of all apps who were declared to be `working` by packagers. The result is a level between 0 and 8, whose meaning is detailed on [this page](/packaging/test). Some tests results may also be available [on this dashboard](https://dash.yunohost.org/appci/branch/stable).
+Automated tests are being run regularly to test the integration and quality of all apps who were declared to be `working` by packagers. The result is a level between 0 and 8, whose meaning is detailed on [this page](/dev/packaging/test). Some tests results may also be available [on this dashboard](https://dash.yunohost.org/appci/branch/stable).
 
 By default, only applications of sufficient quality are offered. When the quality of an application drops and until the problem is reolved, the app is hidden from the catalog to prevent its installation and its upgrades are put on hold.
