--- a/docs/dev/50.packaging/90.policy.mdx
+++ b/docs/dev/50.packaging/90.policy.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_label: Apps catalog policy
+sidebar_label: Catalog policy
 title: YunoHost's policy regarding the apps included in the official catalog
 ---
 
