--- a/docs/community/05.faq.mdx
+++ b/docs/community/05.faq.mdx
@@ -89,7 +89,7 @@ If you really want to have a feature implemented or documented, or an app packag
 
 ### What is YunoHost's policy regarding the apps included in the official catalog ?
 
-See [this page](/packaging/policy)
+See [this page](/dev/packaging/policy)
 
 ### Why won't you include [feature X] ?
 
