--- a/docs/admin/05.get_started/20.install_on/index.mdx
+++ b/docs/admin/05.get_started/20.install_on/index.mdx
@@ -4,8 +4,8 @@ slug: /admin/get_started/install_on
 sidebar_class_name: hidden_menu_caret
 ---
 
-import DocCardList from '@theme/DocCardList'
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common'
+import DocCardList from '@theme/DocCardList';
+import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
 
 Select the hardware on which you want install YunoHost:
 
